objects/Asset/Asset.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>