objects/Asset/fields/Annual_Service_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Due_Date__c</fullName>
    <label>Annual Service Due Date</label>
    <type>Date</type>
</CustomField>