objects/Asset/fields/Date_Of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Manufacture__c</fullName>
    <label>Date Of Manufacture</label>
    <type>Date</type>
</CustomField>