objects/Asset/fields/Est_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Est_Scheduled__c</fullName>
    <label>Est Scheduled</label>
    <type>Date</type>
</CustomField>