objects/Asset/fields/Est_Serv_Time__c.field-meta.xml
<CustomField>
    <fullName>Est_Serv_Time__c</fullName>
    <label>Est Serv Time</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>