objects/Asset/fields/Last_B_down__c.field-meta.xml
<CustomField>
    <fullName>Last_B_down__c</fullName>
    <label>Last B/down</label>
    <type>Date</type>
</CustomField>