objects/Asset/fields/Last_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled__c</fullName>
    <label>Last Scheduled</label>
    <type>Date</type>
</CustomField>