objects/Asset/fields/Memo_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Memo_Cost_Price__c</fullName>
    <label>Memo Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>