objects/Asset/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>