objects/Asset/fields/Site_Contract__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contract</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>SiteContracts__c.Site__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>SiteContracts__c.Site__r.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SiteContracts__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>