objects/Asset/fields/Warranty_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Due_Date__c</fullName>
    <label>Warranty Due Date</label>
    <type>Date</type>
</CustomField>